service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-backend
spec:
  selector:
    app: nginx-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
